tests/error/without_instance.gw
#! [contains] cannot access member
class C {
  var int i;
}

C.i;
